feat: implement user sign up handler
