# docs/swagger.json
@@ -63,8 +63,8 @@
                         }
                     },
                     {
-                        "description": "Password",
-                        "name": "password",
+                        "description": "Name",
+                        "name": "name",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -72,8 +72,8 @@
                         }
                     },
                     {
-                        "description": "User role",
-                        "name": "user_role",
+                        "description": "Password",
+                        "name": "password",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -97,9 +97,13 @@
             "type": "object",
             "required": [
                 "email",
-                "name"
+                "name",
+                "uuid"
             ],
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string",
                     "maxLength": 255
@@ -107,6 +111,18 @@
                 "name": {
                     "type": "string",
                     "maxLength": 255
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_role": {
+                    "type": "string"
+                },
+                "user_status": {
+                    "type": "integer"
+                },
+                "uuid": {
+                    "type": "string"
                 }
             }
         }
