# platform/ent/schema/user.go
@@ -1,6 +1,11 @@
 package schema
 
 import (
+	"time"
+
+	"github.com/STEEDUj2kb/v1/pkg/repository"
+	"github.com/google/uuid"
+
 	"entgo.io/ent"
 	"entgo.io/ent/schema/field"
 )
@@ -13,9 +18,27 @@ type User struct {
 // Fields of the User.
 func (User) Fields() []ent.Field {
 	return []ent.Field{
+		// field.Int("id").
+		// 	StructTag(`json:"-"`),
+		field.UUID("uuid", uuid.UUID{}).
+			Default(uuid.New),
+		field.Time("created_at").
+			Default(time.Now).
+			Immutable(),
+		field.Time("updated_at").
+			Default(time.Now).
+			UpdateDefault(time.Now),
+		field.String("name"),
 		field.String("email").
 			Unique(),
-		field.String("name"),
+		field.Int("user_status").
+			Max(1).
+			Default(1),
+		field.Enum("user_role").
+			Values(repository.AdminRoleName, repository.UserRoleName).
+			Default(repository.UserRoleName),
+		field.String("password_hash").
+			Sensitive(),
 	}
 }
 
